# sokoban

./: .gitigonre  README.md  sokoban.cabal
app/: CodeCLI.hs  Levels.hs  ListFs.hs  Main.hs  Player.hs  Shapes.hs  Skeleton.hs  Supply.hs  Types.hs  Utils.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
python/: levels.txt  out.txt  pbcopy  png_to_list.py  result.txt  txt_to_lvl.py
