cabal-version:      2.4
name:               sokoban
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             gemlorg
maintainer:         gosha10goshalol@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable sokoban
    main-is:          Main.hs 
    -- exposed-modules:    Shapes.hs

    ghc-options:
      -threaded

    -- Modules included in this executable, other than Main.
    other-modules:  Shapes,
                    Types,
                    Utils,
                    Player,
                    Levels,
                    ListFs,
                    CodeCLI

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base >=4.15.1,
        codeworld-api ^>= 0.8.1,
        text >= 1.2,
        ansi-terminal >= 1
        
    hs-source-dirs:   app
    default-language: Haskell2010
